minor tweaks to solve image distotion on mobile and correct more validation issues.

--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ h2 {
 #portrait {
   float: left;
   margin-right: 15px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   width: 50%;
   max-width: 180px;
 }
@@ -40,6 +40,7 @@ h2 {
 .port-images{
     padding: 15px;
     width: 100%;
+    height: auto;
     float: left;
 }
 
